# injective-trader

./: COVERAGE_ANALYSIS.md  LAYER2_COMPLETION_STATUS.md  LAYER2_COMPLETION_SUMMARY.md  LAYER2_ENHANCEMENT_ANALYSIS.md  LAYER3_COMPLETION_SUMMARY.md  LAYER3_INTEGRATION_COMPLETION_SUMMARY.md  LAYER3_MARKET_DATA_PROCESSING.md  SSL_CONNECTIVITY_RESOLUTION.md  comprehensive_validation.py  debug_active_markets.py  debug_api_detailed.py  debug_api_format.py  debug_client_wrapper.py  debug_detailed_analysis.py  debug_injective_subscription.py  debug_market_structure.py  debug_minimal_subscription.py  debug_minimal_test.py  debug_multiple_markets.py  debug_quick_test.py  debug_simple_check.py  discovery_injective_methods.py  fetch_perpetual_markets.py  fetch_perpetual_markets_alt.py  focused_network_validation.py  get_active_markets.py  market_volume_analyzer.py  performance_scalability_test.py  performance_scalability_test_enhanced.py  performance_test_results.json  perpetual_markets_known.json  pyproject.toml  pytest.ini  requirements.txt  test_enhanced_fix_verification.py  test_fix_validation.py  test_fix_verification.py  test_individual_markets.py  test_simple_fix_verification.py  test_single_market_verification.py  (+1 more)
.github/instructions/: data_sources.instructions.md  development_workflow.instructions.md  implementation_roadmap.instructions.md  paper_trading.instructions.md  performance_optimization.instructions.md  project_overview.instructions.md  risk_management.instructions.md  tdd_practices.instructions.md  technical_architecture.instructions.md  terminal_dashboard.instructions.md  testing_strategy.instructions.md  trading_strategies.instructions.md
src/injective_bot/: __init__.py
tests/: __init__.py  conftest.py
(+41 files in other folders)
